# raspberry

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  main.sh  nginx.conf
.github/workflows/: main.yml
migrations/: 20220519231157_1.down.sql  20220519231157_1.up.sql
src/: _server.rs  _session.rs  html.rs  main.rs  messages.rs  server.rs  session.rs
src/controllers/: admin.rs  channels.rs  count.rs  default.rs  discord.rs  extractor.rs  guilds.rs  index.rs  login.rs  logout.rs  mod.rs  samesite.rs  signup.rs  sqlx.rs  verify.rs  ws.rs
src/db/: channels.rs  guilds.rs  login.rs  logout.rs  mod.rs  models.rs  signup.rs  start.rs  verify.rs  ws_session.rs
src/format/: date_format.rs  date_format2.rs  mod.rs  uuid_format.rs
src/messages/: mod.rs  send.rs
src/messages/receive/: mod.rs
src/test/: index.rs
src/views/: _login.html  admin.html  chat.html  discord.html  index.html  login.html  logout.html  signup.html  verify.html
