[package]
name = "raspberry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raspberry-backend-app"
path = "src/main.rs"

[dependencies]
futures = "0.3"
actix-rt = "2.6"
actix-web = "4"
actix-ws = "0.2.0"
actix-http = "3.0.4"
actix-identity = "0.4.0"
tokio = { version = "1", features = ["sync"]}
env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1", features=["derive"] }
serde_json = "1"
sqlx = { version = "0.5.13", features = [ "postgres", "chrono", "runtime-actix-native-tls", "uuid" ] }
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }