[package]
name = "raspberry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raspberry-backend-app"
path = "src/main.rs"

[dependencies]
regex = "1.6.0"
futures = "0.3.21"
actix-cors = "0.6.1"
actix-web = "4.1.0"
actix-ws = "0.2.5"
actix-http = "3"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
captcha-rs = "0.2.6"
tokio = { version = "1.19.2", features = ["sync"] }
env_logger = "0.9.0"
utoipa = { version = "1.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "1", features = ["actix-web"] }
log = "0.4.17"
lettre = "0.10"
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.0", features = [ "postgres", "chrono", "runtime-actix-native-tls", "uuid" ] }
chrono = { version = "0.4.19", features = [ "std" ] }
uuid = { version = "1.1.2", features = [ "serde" ] }
argon2 = "0.4.1"
rand_core = { version = "0.6.3", features = ["std"] }
