[package]
name = "raspberry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raspberry-backend-app"
path = "src/main.rs"

[dependencies]
async-trait="0.1"
regex = "1.6.0"
futures = "0.3.21"
actix-cors = "0.6.2"
actix-web = "4.2.1"
actix-ws = "0.2.5"
actix-http = "3"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] }
captcha-rs = "0.2.10"
tokio = { version = "1.21.1", features = ["sync"] }
env_logger = "0.9.0"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
user-agent-parser = "0.3"
log = "0.4.17"
lettre = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
sqlx = { version = "0.6", features = [ "postgres", "chrono", "runtime-actix-native-tls", "uuid" ] }
chrono = { version = "0.4.19", features = [ "std" ] }
uuid = { version = "1.1.2", features = [ "serde", "v4" ] }
argon2 = "0.4.1"
rand_core = { version = "0.6.3", features = ["std"] }
enum_dispatch = "0.3.8"
itertools = "0.10"
clokwerk = "0.3.5"
# my own crate!1!
raspberry_macros = "0.1.0"